--- a/src/views/pages/calculadora.ejs
+++ b/src/views/pages/calculadora.ejs
@@ -28,7 +28,6 @@
                                         <line x1="3" y1="10" x2="21" y2="10"></line>
                                     </svg>
                                 </button>
-                                <div id="datePickerFechaValuacion" class="date-picker-popup" style="display: none;"></div>
                             </div>
                         </div>
                         <!-- Panel solo para ajuste CER (CER Valuación) -->
@@ -181,7 +180,6 @@
                                             <line x1="3" y1="10" x2="21" y2="10"></line>
                                         </svg>
                                     </button>
-                                    <div id="datePickerFechaCompra" class="date-picker-popup" style="display: none;"></div>
                                 </div>
                             </div>
                             
@@ -212,7 +210,7 @@
                                     
                                     <div class="form-group">
                                         <label class="form-label" style="font-size: 13px; margin-bottom: 4px;">Tasa</label>
-                                        <select class="input input-sm" id="tasa">
+                                        <select class="input input-sm input-opcional" id="tasa">
                                             <option value="">Seleccionar...</option>
                                             <option value="badlar">BADLAR</option>
                                             <option value="tamar">TAMAR</option>
@@ -267,7 +265,6 @@
                                                     <line x1="3" y1="10" x2="21" y2="10"></line>
                                                 </svg>
                                             </button>
-                                            <div id="datePickerFechaEmision" class="date-picker-popup" style="display: none;"></div>
                                         </div>
                                     </div>
                                     
@@ -298,7 +295,6 @@
                                                             <line x1="3" y1="10" x2="21" y2="10"></line>
                                                         </svg>
                                                     </button>
-                                                    <div id="datePickerFechaAmortizacion" class="date-picker-popup" style="display: none;"></div>
                                                 </div>
                                             </div>
                                             <div style="flex: 0 0 60px;">
