--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,6 +19,9 @@
             <a href="/feriados" class="header-tab <%= activeMenu === 'feriados' ? 'active' : '' %>">
                 <span>Feriados</span>
             </a>
+            <a href="/inventario" class="header-tab <%= activeMenu === 'inventario' ? 'active' : '' %>">
+                <span>Inventario</span>
+            </a>
             </nav>
         </div>
         
