--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= typeof title !== 'undefined' ? title + ' - Calculadora TIR' : 'Calculadora TIR' %></title>
+    <title>Calculadora Mercap</title>
     
     <!-- Favicon - debe estar antes del CSS -->
     <link rel="icon" type="image/x-icon" href="/images/logo.ico">
