--- a/src/views/pages/404.ejs
+++ b/src/views/pages/404.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= typeof title !== 'undefined' ? title : 'Página no encontrada' %> - Calculadora TIR</title>
+    <title>Calculadora Mercap</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/logo.ico">
