--- a/src/views/pages/calculadora.ejs
+++ b/src/views/pages/calculadora.ejs
@@ -337,6 +337,11 @@
                                             </div>
                                         </div>
                                     </div>
+                                    
+                                    <div class="form-group" id="cantidadTasasGroup" style="display: none;">
+                                        <label class="form-label" style="font-size: 13px; margin-bottom: 4px;">Cantidad tasas</label>
+                                        <input type="number" class="input input-sm" id="cantidadTasas" step="1" min="1" placeholder="Ej: 3" />
+                                    </div>
                                 </div>
                             </div>
                             
