--- a/src/views/pages/calculadora.ejs
+++ b/src/views/pages/calculadora.ejs
@@ -85,7 +85,7 @@
                             <table class="cupones-table" id="tablaCupones">
                                 <thead>
                                     <tr>
-                                        <th style="min-width: 50px;">Cupón</th>
+                                        <th style="min-width: 35px; width: 35px;">N°</th>
                                         <th>Fecha<br>Inicio</th>
                                         <th>Fecha Fin<br>Dev</th>
                                         <th>Fecha<br>Liquid.</th>
